Closed Bug 1880199 Opened 2 years ago Closed 2 years ago

Ensure pinned tabs expose their pinned state to the Accessibility API

Categories

(Firefox :: Disability Access, defect)

Desktop
All
defect

Tracking

()

RESOLVED FIXED
125 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox122 --- wontfix
firefox123 --- wontfix
firefox124 --- fixed
firefox125 --- fixed

People

(Reporter: ayeddi, Assigned: Jamie)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression)

Attachments

(2 files)

Pinned tabs do not expose their pinned state to the Accessibility API anymore.

Gecko supports pinned state in the XULTabAccessible, but since the pseudo-boolean tab strip attribute was changed to be a standard boolean, the a11y engine cannot confirm the pinned state.

Note: the issue affects all desktop platforms, but macOS does not have support for pinned state, so we may need to track it separately

Severity: -- → S3
Accessibility Severity: s3 → ---

Set release status flags based on info from the regressing bug 1849904

:dao, since you are the author of the regressor, bug 1849904, could you take a look?

For more information, please visit BugBot documentation.

A11y should now check whether the attribute exists rather than checking for "true". But we should probably also have a browser test for this, since it regressed without anyone noticing.

Keywords: access
Blocks: pinnedtabs

Set release status flags based on info from the regressing bug 1849904

In bug 1849904, the pinned attribute was changed to be a boolean attribute.
However, a11y was not updated accordingly and was still looking for the explicit value "true".
This meant that when pinned tabs were restored, their pinned state was not exposed to accessibility clients.
Fix this by checking for the presence of the pinned attribute instead, since presence means true and absence means false.

Assignee: nobody → jteh
Status: NEW → ASSIGNED
Pushed by jteh@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/0e0920b02ea7 Make XULTabAccessible check for the presence of the pinned attribute rather than the explicit value "true". r=ayeddi
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 125 Branch

:jamie is this important enough to uplift to Fx124? If not, please set status-firefox124 to wontfix

Flags: needinfo?(jteh)

In bug 1849904, the pinned attribute was changed to be a boolean attribute.
However, a11y was not updated accordingly and was still looking for the explicit value "true".
This meant that when pinned tabs were restored, their pinned state was not exposed to accessibility clients.
Fix this by checking for the presence of the pinned attribute instead, since presence means true and absence means false.

Original Revision: https://phabricator.services.mozilla.com/D202372

Attachment #9387972 - Flags: approval-mozilla-beta?
Flags: needinfo?(jteh)
Flags: needinfo?(dao+bmo)

Uplift Approval Request

  • String changes made/needed: none
  • Risk associated with taking this patch: low
  • Needs manual QE test: no
  • Fix verified in Nightly: yes
  • Explanation of risk level: Changes a single, specific check in the a11y code. It can't break any further than it already is.
  • Code covered by automated testing: yes
  • Steps to reproduce for manual QE testing: not applicable
  • Is Android affected?: no
  • User impact if declined: It will be difficult for screen reader users to determine which browser tabs are pinned.
Attachment #9387972 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: