Bug 1880199: Make XULTabAccessible check for the presence of the pinned attribute rather than the explicit value "true". r=ayeddi

In bug 1849904, the pinned attribute was changed to be a boolean attribute.
However, a11y was not updated accordingly and was still looking for the explicit value "true".
This meant that when pinned tabs were restored, their pinned state was not exposed to accessibility clients.
Fix this by checking for the presence of the pinned attribute instead, since presence means true and absence means false.

Differential Revision: https://phabricator.services.mozilla.com/D202372